Bug 1116586 - Fix hit region for items with rounded corners. r=tn